--- a/src/index.css
+++ b/src/index.css
@@ -3,5 +3,11 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer utilities {
+    .custom-border-radius {
+      border-radius: 34% 64% 77% 26% / 73% 54% 45% 19%;
+    }
+  }
+
 
 
